k8s/base/http/nz-courses/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nz-courses-service
  namespace: http
spec:
  selector:
    app: nz-courses
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
