k8s/base/http/nz-courses/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nz-courses-ingress
  namespace: http
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nz-courses.nicolatomassoni.it
      secretName: nz-courses-tls
  rules:
  - host: "nz-courses.nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nz-courses-service
            port:
              number: 80
